--- a/app/src/main/res/layout/activity_names.xml
+++ b/app/src/main/res/layout/activity_names.xml
@@ -8,7 +8,7 @@
 
 
     <ListView
-        android:id="@+id/list_view_places"
+        android:id="@+id/list_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
@@ -17,21 +17,21 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_below="@+id/list_view_places"
+        android:layout_below="@+id/list_view"
         android:background="@android:color/darker_gray" />
 
 
     <RelativeLayout
-        android:id="@+id/places_rl1"
+        android:id="@+id/relative_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/list_view_places"
+        android:layout_below="@+id/list_view"
         >
 
 
 
         <EditText
-            android:id="@+id/etAdd_places"
+            android:id="@+id/etAdd"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
@@ -46,29 +46,30 @@
     </RelativeLayout>
 
     <View
-        android:id="@+id/divider_places"
+        android:id="@+id/divider"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_below="@+id/places_rl1"
+        android:layout_below="@+id/relative_layout"
         android:background="@android:color/darker_gray" />
 
 
     <Button
-        android:id="@+id/bSave_places"
+        android:id="@+id/bSave"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/divider_places"
+        android:layout_below="@+id/divider"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
         android:background="#80DEEA"
         android:text="שמור"
+        android:visibility="visible"
         android:textColor="#000000"
         android:textStyle="bold" />
     <Button
-        android:id="@+id/bAdd_place"
+        android:id="@+id/bAdd_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/divider_places"
+        android:layout_below="@+id/divider"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
         android:background="#A5D6A7"
