--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -17,6 +17,7 @@
             android:orientation="vertical">
 
             <TextView
+                android:textIsSelectable="true"
                 android:id="@+id/tvResult"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -25,14 +26,31 @@
                 android:textColor="#000000"
                 android:textDirection="rtl"
                 android:textSize="18sp" />
+<LinearLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:layout_marginTop="20dp"
+    android:layout_gravity="center"
 
-            <ImageView
-                android:id="@+id/bShare"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:layout_gravity="center"
-                android:src="@drawable/ic_baseline_delete_24"/>
+    >
+
+    <ImageView
+        android:id="@+id/bShare"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:src="@drawable/whatsapp"/>
+    <ImageView
+        android:id="@+id/bCopy"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginLeft="10dp"
+        android:src="@drawable/ic_baseline_copy"/>
+
+</LinearLayout>
+
         </LinearLayout>
     </ScrollView>
 
